# imap-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: docker.yml
imap_api/: config.py  main.py
imap_api/api/: emails.py  status.py
imap_api/core/: idle_worker.py  mime.py  reaper.py  sync.py
imap_api/security/: auth.py
imap_api/storage/: db.py  models.py
